Colaboratory を使用して作成しました

--- a/tensor.ipynb
+++ b/tensor.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPNHauSGwhBUMwgDV5HOxgN",
+      "authorship_tag": "ABX9TyOCH60a35a8TThM4veXHHTU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VYvWcS7ObZcw",
-        "outputId": "f7a54ebf-c4e9-457e-9f48-12086c76c322"
+        "outputId": "2bdf83a9-6052-4431-b4c0-78a561fa99de"
       },
       "outputs": [
         {
@@ -49,16 +49,41 @@
         "import torch\n",
         "\n",
         "#create tensor from list\n",
-        "list = [1,2,3]\n",
-        "tensor_list = torch.tensor(list)\n",
+        "tensor_list = torch.tensor([1,2,3])\n",
         "print(tensor_list, type(tensor_list))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#create tensor from list\n",
+        "tensor_2d_list = torch.tensor([[1,2],[3,4]])\n",
+        "print(tensor_2d_list, type(tensor_2d_list),tensor_2d_list.dtype)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DqRVa39IclG_",
+        "outputId": "4d8cfb93-131e-4f83-a4f0-9f12282b7a19"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1, 2],\n",
+            "        [3, 4]]) <class 'torch.Tensor'> torch.int64\n"
+          ]
+        }
       ]
     },
     {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "DqRVa39IclG_"
+        "id": "xTbXbp87iWx1"
       },
       "execution_count": null,
       "outputs": []
