Colaboratory を使用して作成しました

--- a/tensor.ipynb
+++ b/tensor.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM2sLnwp1IXph3JeTLvBytj",
+      "authorship_tag": "ABX9TyPjoVqeJ+NKnOiyrVXI1jQm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -259,7 +259,6 @@
         "from torch import nn\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "\n",
         "m = nn.Sigmoid() #sigmoid\n",
         "m = nn.ReLU() # ReLU\n",
         "m = nn.GELU() # GELU\n",
@@ -292,10 +291,125 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "ソフトマックス関数"
+      ],
+      "metadata": {
+        "id": "9EItMtg045oE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "from torch import nn\n",
+        "\n",
+        "m = nn.Softmax(dim = -1)\n",
+        "x = torch.tensor([[1.0,2.0,3.0],[3.0,2.0,1.0]])\n",
+        "y = m(x)\n",
+        "\n",
+        "print(y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "25tHOA-e4-tB",
+        "outputId": "9bf03211-ff9f-4cd9-e2c3-843dcace7f8e"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[0.0900, 0.2447, 0.6652],\n",
+            "        [0.6652, 0.2447, 0.0900]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "損失関数"
+      ],
+      "metadata": {
+        "id": "9mjTR97p2pV3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "from torch import nn\n",
+        "#平均二乗誤差\n",
+        "y = torch.tensor([3.0, 3.0, 3.0]) #出力\n",
+        "t = torch.tensor([2.0, 2.0, 2.0]) #正解\n",
+        "\n",
+        "loss_func = nn.MSELoss() # 平均二乗誤差\n",
+        "loss = loss_func(y,t)\n",
+        "print(loss.item())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QPlEnJ5T1Owu",
+        "outputId": "56a7a169-1460-4aed-bc6d-7dcb73d75a9d"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#交差エントロピー誤差\n",
+        "#softmax関数への入力\n",
+        "x = torch.tensor([[1.0,2.0,3.0],  #入力1\n",
+        "                  [3.0,2.0,1.0]]) #入力2\n",
+        "\n",
+        "#正解(one-hot表現における1の位置)\n",
+        "\n",
+        "t = torch.tensor([2,  #入力1に対応する正解\n",
+        "                  0]) #入力2に対応する正解\n",
+        "\n",
+        "loss_func = nn.CrossEntropyLoss() # softmax関数 + 交差エントロピー誤差\n",
+        "loss = loss_func(x,t)\n",
+        "print(loss.item())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jqgfIvxE38aH",
+        "outputId": "58ef685b-604a-4f4a-8265-4cb18a07f081"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.40760594606399536\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "QPlEnJ5T1Owu"
+        "id": "eotWF9Hv6Vup"
       },
       "execution_count": null,
       "outputs": []
